// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`format validation failure (unrecognized key) 1`] = `
[
  "schema: Unrecognized key "notAField"",
]
`;

exports[`format validation failure (wrong type for a required field) 1`] = `
[
  "schema: Failed at ["ts"]["schema"]: Expected string, received 42",
  "goldens could not be computed: [Sury] No schema provided for decoder.",
]
`;

exports[`full op block claimed but the operation actually compiles to identity 1`] = `
[
  "operations.decode: compiles to identity — use \`identity\` instead of an expression + examples",
  "goldens stale — run \`pnpm spec check string --write\`",
]
`;

exports[`identity claimed but the operation doesn't actually compile to identity 1`] = `
[
  "operations.decode: marked \`identity\` but does not compile to identity — use a full op block with examples",
  "operations.encode: marked \`identity\` but does not compile to identity — use a full op block with examples",
  "goldens stale — run \`pnpm spec check string --write\`",
]
`;

exports[`invalid _skip reason (not an enum value or todo(#...)) 1`] = `
[
  "string.ts.bundleBytes: invalid _skip reason "because-i-said-so"",
]
`;

exports[`multiple simultaneous problems all get their own guiding message 1`] = `
[
  "string.ts.bundleBytes: invalid _skip reason "nonsense-reason"",
  "goldens stale — run \`pnpm spec check string --write\`",
]
`;

exports[`not canonical (on-disk text doesn't match the canonical form) 1`] = `
[
  "not canonical — run \`pnpm spec fmt string\`",
]
`;

exports[`schema source doesn't evaluate (syntax error) 1`] = `
[
  "ts.schema did not evaluate: Unexpected token '>>>'",
]
`;

exports[`stale golden (expression drifted from what the schema actually compiles to) 1`] = `
[
  "goldens stale — run \`pnpm spec check string --write\`",
]
`;

exports[`stale golden (recorded example output no longer matches live behavior) 1`] = `
[
  "goldens stale — run \`pnpm spec check string --write\`",
]
`;
